test-cases/negative/test_153_invalid_object_property_access.lay
# negative test: accessing property on non-object
# expected: type checker should catch this

the variable x of type Number is 5
the variable y of type String is x dot name


